SVY-18757 Fix Server-Side Request Forgery (SSRF) reported in Snyk.io
make sure that the classes are a hardcoded list