@@ -24,7 +24,7 @@ import java.io.InputStream;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.file.Paths;
-import java.util.Properties;
+import java.util.Map;
 
 import javax.servlet.ServletException;
 import javax.servlet.ServletOutputStream;
@@ -33,9 +33,6 @@ import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
-import org.eclipse.swt.widgets.Display;
-
-import com.servoy.eclipse.cheatsheets.OpenCheatSheet;
 import com.servoy.eclipse.firststeps.ui.actions.IAction;
 import com.servoy.eclipse.model.util.ServoyLog;
 import com.servoy.j2db.util.MimeTypes;
@@ -44,6 +41,9 @@ import com.servoy.j2db.util.Utils;
 @WebServlet("/firststeps/*")
 public class ResourcesServlet extends HttpServlet
 {
+	private static final Map<String,String> allowedClasses = Map.of("com.servoy.eclipse.firststeps.ui.actions.CloseDialog", "com.servoy.eclipse.firststeps.ui.actions.CloseDialog",
+																	"com.servoy.eclipse.firststeps.ui.actions.NewForm", "com.servoy.eclipse.firststeps.ui.actions.NewForm",
+																	"com.servoy.eclipse.firststeps.ui.actions.OpenURL", "com.servoy.eclipse.firststeps.ui.actions.OpenURL");
 	private static final long serialVersionUID = 1L;
 
 	@Override
@@ -59,15 +59,18 @@ public class ResourcesServlet extends HttpServlet
 				idxClassNameEnd = path.length();
 			}
 
-			String className = path.substring(8, idxClassNameEnd);
+			String identifier = path.substring(8, idxClassNameEnd);
 			try
 			{
-				Class<?> clazz = forName(className);
-				Object actionInstance = clazz.newInstance();
-				if(actionInstance instanceof IAction)
-				{
-					String argument = path.substring(idxClassNameEnd);
-					((IAction)actionInstance).run(argument);
+				String className = allowedClasses.get(identifier);
+				if (className != null) {
+					Class<?> clazz = forName(className);
+					Object actionInstance = clazz.getDeclaredConstructor().newInstance();
+					if(actionInstance instanceof IAction)
+					{
+						String argument = path.substring(idxClassNameEnd);
+						((IAction)actionInstance).run(argument);
+					}
 				}
 			}
 			catch(Exception ex)
